lets try connecting the css again...

--- a/depictions/A Wave/index.html
+++ b/depictions/A Wave/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <!-- title -->
     <title>A Wave</title>
-    <link rel="stylesheet" href="../_css/cydia.min.css">
+    <link rel="stylesheet" href="/_css/cydia.min.css">
   </head>
     <body>
       <header>
