updated heights and added credits + center image
- fixes for bipolar balls, hello again, pulse, upload, world swap
- credits added for colorful stars in space, gameboy advance, gamecube
logo, hello again, pepe matrix, rainbow 8, rainy, sonic running,
stranger things, super mario,

--- a/depictions/Bipolar Balls/index.html
+++ b/depictions/Bipolar Balls/index.html
@@ -27,7 +27,7 @@
           <h2>Preview</h2>
             <ul>
               <li>
-                <img src="Bipolar Balls.gif" alt="Bipolar Balls animation">
+                <img src="Bipolar Balls.gif" alt="Bipolar Balls animation" width="300" height="300">
               </li>
             </ul>
           <!--
