--- a/depictions/Gameboy Advance/index.html
+++ b/depictions/Gameboy Advance/index.html
@@ -20,7 +20,7 @@
           <h2>Description</h2>
           <ul>
             <li>
-              <p>Animated respring theme for Springy.</p>
+              <p>Animated respring theme for Springy. Credit: /u/CherryYums</p>
             </li>
           </ul>
 
