--- a/depictions/Hello Again/index.html
+++ b/depictions/Hello Again/index.html
@@ -20,14 +20,14 @@
           <h2>Description</h2>
           <ul>
             <li>
-              <p>Animated respring theme for Springy.</p>
+              <p>Animated respring theme for Springy. Credit: /u/Steve-luo</p>
             </li>
           </ul>
 
           <h2>Preview</h2>
             <ul>
               <li>
-                <img src="Hello Again.gif" alt="Hello Again animation">
+                <img src="Hello Again.gif" alt="Hello Again animation" height="270" width="480">
               </li>
             </ul>
           <!--
