--- a/depictions/Upload/index.html
+++ b/depictions/Upload/index.html
@@ -27,7 +27,7 @@
           <h2>Preview</h2>
             <ul>
               <li>
-                <img src="Upload.gif" alt="Upload animation">
+                <img src="Upload.gif" alt="Upload animation" height="150" width="200">
               </li>
             </ul>
           <!--
