--- a/depictions/World Swap/index.html
+++ b/depictions/World Swap/index.html
@@ -27,7 +27,7 @@
           <h2>Preview</h2>
             <ul>
               <li>
-                <img src="World Swap.gif" alt="World Swap animation">
+                <img src="World Swap.gif" alt="World Swap animation" height="150" width="200">
               </li>
             </ul>
           <!--
