spelling error fix for Time and Money

--- a/depictions/Time And Money/index.html
+++ b/depictions/Time And Money/index.html
@@ -27,7 +27,7 @@
           <h2>Preview</h2>
             <ul>
               <li>
-                <img src="Time And Money.gif" alt="Time And Money animation">
+                <img src="Time and Money.gif" alt="Time And Money animation">
               </li>
             </ul>
           <!--
