added GA integration + fixed fall leaves viewport

--- a/depictions/Fall Leaves/index.html
+++ b/depictions/Fall Leaves/index.html
@@ -27,7 +27,7 @@
           <h2>Preview</h2>
             <ul>
               <li>
-                <img src="Fall Leaves.gif" alt="Fluid animation">
+                <img src="Fall Leaves.gif" alt="Fluid animation" height="300" width="300">
               </li>
             </ul>
           <!--
