GA Integration + Added spinning rings deb

--- a/depictions/Three Waves/index.html
+++ b/depictions/Three Waves/index.html
@@ -9,6 +9,7 @@
     <!-- title -->
     <title>Three Waves</title>
     <link rel="stylesheet" href="/css/cydia.min.css">
+    <script src="/css/analytics.js"></script>
   </head>
     <body>
       <header>
