--- a/depictions/Rolling Circles/index.html
+++ b/depictions/Rolling Circles/index.html
@@ -9,6 +9,7 @@
     <!-- title -->
     <title>Rolling Circles</title>
     <link rel="stylesheet" href="/css/cydia.min.css">
+    <script src="/css/analytics.js"></script>
   </head>
     <body>
       <header>
