--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http%3A%2F%2Fvirenmohindra.github.io">Add to Cydia</a>
         </li>
       </ul>
-      <p class="footer">Report issues to /u/VirenM97. | Icon by Colt Hartman {Contra}</p>
+      <p class="footer">Report issues to {firstName} . {lastName} @ gmail.com | Icon by Colt Hartman {Contra}</p>
     </main>
 
     <script>(function(a){"use strict";navigator.userAgent.indexOf("Cydia")!=-1?(a.title=a.title.split(" \u00b7 ")[0],a.documentElement.classList.add("cydia")):a.documentElement.classList.remove("cydia","depiction")})(document)
