added Amalgamation deb

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="shortcut icon" 						href="/favicon.ico" type="image/x-icon" />
@@ -15,25 +15,115 @@
     <link rel="apple-touch-icon" sizes="144x144" 	href="/css/assets/apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" 	href="/css/assets/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" 	href="/css/assets/apple-touch-icon-180x180.png" />
-	<meta name="apple-mobile-web-app-title" 		content="Viren's Repo">
-	<meta name="application-name" 					content="Viren's Repo">
-	<meta name="theme-color" 						content="#ffffff">
-
-    <title>Cydia Package Depiction</title>
+    <meta name="apple-mobile-web-app-title" 		content="Viren's Repo">
+    <meta name="application-name" 					content="Viren's Repo">
+    <meta name="theme-color" 						content="#ffffff">
+    <meta name="description" content=" ">
+    
+    <title>Viren Mohindra</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="/css/analytics.js"></script>
+    
+    <!-- Stylesheets Start -->
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/icons.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700|Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+    <!-- Stylesheets End -->
+    <script src="https://use.fontawesome.com/54f4576fe2.js"></script>
   </head>
+
   <body class="depiction">
     <header>
       <h1>Welcome to Viren Mohindra's repo!</h1>
     </header>
     <main id="content" role="main">
-      <ul>
-        <li>
+    <ul>
+      <li>
         <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http%3A%2F%2Fvirenmohindra.github.io">Add to Cydia</a>
-        </li>
-      </ul>
-      <p class="footer">Report issues to {firstName} . {lastName} @ gmail.com | Icon by Colt Hartman {Contra}</p>
+      </li>
+    </ul>
+    <p class="footer">Report issues to {firstName} . {lastName} @ gmail.com | Icon by Colt Hartman {Contra}</p>
     </main>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <a href="https://github.com/VirenMohindra" target="_blank"><i class="fa fa-github"></i> GitHub</a>
+            </div>
+            <div class="col-md-3">
+                <a href="https://nyu.academia.edu/VirenMohindra" target="_blank"><i class="fa fa-book"></i> Academia</a>
+            </div>
+            <div class="col-md-3">
+                <a href="https://www.linkedin.com/in/VirenMohindra" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
+            </div>
+            <div class="col-md-3">
+                <a href="https://www.youtube.com/user/SwiftHorsefly/videos?view=0&flow=grid&sort=p" target="_blank"><i class="fa fa-youtube"></i> YouTube</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <a href="https://www.fb.com/virenmohindra" target="_blank"><i class="fa fa-facebook"></i> Facebook</a>
+            </div>
+            <div class="col-md-3">
+                <a href="https://nyu.academia.edu/VirenMohindra" target="_blank"><i class="fa fa-book"></i> Twitter</a>
+            </div>
+            <div class="col-md-3">
+                <a href="https://www.linkedin.com/in/VirenMohindra" target="_blank"><i class="fa fa-linkedin"></i> Bhenchod</a>
+            </div>
+            <div class="col-md-3">
+                <a href="https://www.youtube.com/user/SwiftHorsefly/videos?view=0&flow=grid&sort=p" target="_blank"><i class="fa fa-youtube"></i> TrumpTracker</a>
+            </div>
+        </div>
+    </div>        
+        <!-- Hire Me Button Start -->
+        <div class="button-holder hidden">
+        <a href="#" class="type-10">
+            <span>
+                <span>
+                    <span><i data-icon="a" class="icon"></i>Hire Me</span>
+                    <span><i data-icon="a" class="icon"></i>Hire Me</span>
+                </span>
+            </span>
+        </a>
+        </div>
+        <!-- Hire Me Button End -->
+
+        <!-- Content Start -->
+        <div id="container">
+            <div class="picture hidden"></div>
+            <h2 class="sub-title hidden">Daniel Friis</h2>
+            <h1 class="title hidden"><span class="typed"></span></h1>
+            <ul id="social-links">
+                <li class="hidden"><a class="twitter" href="http://twitter.com/daniel_friis">Twitter</a></li>
+                <li class="hidden"><a class="dribbble" href="https://dribbble.com/friis">Dribbble</a></li>
+                <li class="hidden"><a class="instagram" href="http://instagram.com/daniel_friis">Instagram</a></li>
+                <li class="hidden"><a class="skype" href="skype:add?daniel.friis">Skype</a></li>
+                <li class="hidden"><a class="linkedin" href="http://dk.linkedin.com/in/danielfriisjensen">LinkedIn</a></li>
+                <li class="hidden"><a class="mail" href="mailto:hello@danielfriis.com">Mail</a></li>
+            </ul>
+        </div>
+        <!-- Content End -->
+    <!--<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
+    <script src="js/fadein.js"></script>
+    <script src="js/typed.js"></script>
+    <script>
+      $(function(){
+          $(".typed").typed({
+            strings: ["Entrepreneur.", "Developer.", "Financier.", "^1500 Pretty ^1000 friendly human."],
+            typeSpeed: 80,
+            startDelay: 1800,
+            backDelay: 2000,
+            loop: true
+          });
+      });
+    </script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
