OG:TYPE SEO for fb

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <meta property="og:url" content="https://virenmohindra.me"/>
 <meta property="og:site_name" content="virenmohindra.me"/>
 <meta property="og:title" content="Hi! I'm Viren Mohindra | NYU Film & CS '19"/>
+<meta property="og:type"   content="website" />
 <meta property="og:description" content="I make websites and stuff. | NYU'19 | Trump Tracker Founder"/>
  
 <meta property="og:image" content="img/viren.jpg"/>
