--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 <meta name="theme-color" content="#ffffff">
  
 <meta property="og:url" content="https://virenmohindra.me"/>
-<meta property="og:site_name" content="virenmohindra.me"/>
+<meta property="og:site_name" content="https://virenmohindra.me"/>
 <meta property="og:title" content="Hi! I'm Viren Mohindra | NYU Film & CS '19"/>
 <meta property="og:type"   content="website" />
 <meta property="og:description" content="I make websites and stuff. | NYU'19 | Trump Tracker Founder"/>
  
-<meta property="og:image" content="img/viren.jpg"/>
+<meta property="og:image" content="https://virenmohindra.me/img/viren.jpg"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="all,follow">
 
